# esp32

esp32-cam/: .gitignore  CMakeLists.txt
esp32-cam/main/: CMakeLists.txt  idf_component.yml  main.c
pn532_example/: CMakeLists.txt  sdkconfig  sdkconfig.old
pn532_example/core/: CMakeLists.txt
pn532_example/core/Inc/: main.h  mqtt_pn.h  pn532.h  uart.h
pn532_example/core/Src/: main.c  main.cpp  mqtt.c  mqtt_pn.c  pn532.c  pn532.cpp  uart.c
